# hardplacepro

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
hardplacepro/: __main__.py
tests/: test_hardplacepro.py
